--- a/templates/index.html
+++ b/templates/index.html
@@ -229,7 +229,7 @@
                     <div class="row m-0">
                         <div class="col-sm-6 p-0 text-center">
                             <div class="h-100 d-flex flex-column justify-content-center bg-secondary p-4">
-                                <h5 class="mb-2">Vinayak B</h5>
+                                <h5 class="mb-2">Vinayak Biswagar</h5>
                                 <p class="text-muted font-italic mb-2">Electrical &Electronics</p>
                                 <p>Tech-savvy and smartworking individual with a passion for Videography</p>
                                 <div class="position-relative mb-2">
