--- a/templates/index.html
+++ b/templates/index.html
@@ -30,7 +30,7 @@
     <!-- Navbar Start -->
     <nav class="navbar fixed-top shadow-sm navbar-expand-lg bg-dark navbar-dark py-1 py-lg-0 px-lg-5">
         <a href="index.html" class="navbar-brand d-block d-lg-none">
-            <h1 class="display-4 text-white text-uppercase m-0">Core</h1>
+            <h1 class="display-4 text-white text-uppercase m-0">ML</h1>
         </a>
         <button type="button" class="navbar-toggler" data-toggle="collapse" data-target="#navbarCollapse">
             <span class="navbar-toggler-icon"></span>
@@ -48,8 +48,8 @@
             <div class="navbar-nav mr-auto py-0">
                 <a href="#team" class="nav-item nav-link">Team</a>
                 <a href="#guide" class="nav-item nav-link">Guides</a>
-               <!-- <a href="#testimonial" class="nav-item nav-link">Testimonial</a>
-                <a href="#contact" class="nav-item nav-link">Contact</a>-->
+                <a target="_blank" href="https://github.com/VINAYAKBISWAGAR/mlproject" class="nav-item nav-link">Github</a>
+                <!-- <a href="#contact" class="nav-item nav-link">Contact</a>-->
             </div>
         </div>
     </nav>
@@ -231,6 +231,7 @@
                             <div class="h-100 d-flex flex-column justify-content-center bg-secondary p-4">
                                 <h5 class="mb-2">Vinayak Biswagar</h5>
                                 <p class="text-muted font-italic mb-2">Electrical &Electronics</p>
+                                <p>USN: 2GI19EE052</p>
                                 <p>Tech-savvy and smartworking individual with a passion for Videography</p>
                                 <div class="position-relative mb-2">
                                     
@@ -255,7 +256,9 @@
                             <div class="h-100 d-flex flex-column justify-content-center bg-secondary p-4">
                                 <h5 class="mb-2">Mihir Patel</h5>
                                 <p class="text-muted font-italic mb-2">Electrical &Electronics</p>
+                                <p>USN: 2GI19EE022 </p>
                                 <p>Ambitious and curious person with a love for adventure and a strong work ethic</p>
+                                
                                 <div class="position-relative mb-2">
                                     <a class="btn btn-outline-primary btn-square mr-1" target="_blank" href="https://www.instagram.com/mihir006/"><i class="fab fa-instagram"></i></a>
                                     <a class="btn btn-outline-primary btn-square mr-1" target="_blank" href="https://www.facebook.com/Mihir006"><i class="fab fa-facebook-f"></i></a>
@@ -274,6 +277,7 @@
                                 <h5 class="mb-2">Archana Madalageri 
                                 </h5>
                                 <p class="text-muted font-italic mb-2">Electrical &Electronics</p>
+                                <p>USN: 2GI19EE007</p>
                                 <p>Confused, Curious and Creative who loves painting and exploring new things and places</p>
                                 <div class="position-relative mb-2">
                                     <a class="btn btn-outline-primary btn-square mr-1" target="_blank" href="https://instagram.com/_archana_c_m_?igshid=ZDdkNTZiNTM="><i class="fab fa-instagram"></i></a>
@@ -298,6 +302,7 @@
                             <div class="h-100 d-flex flex-column justify-content-center bg-secondary p-4">
                                 <h5 class="mb-2">Abhishek Khot</h5>
                                 <p class="text-muted font-italic mb-2">Electrical &Electronics</p>
+                                <p>USN: 2GI19EE002</p>
                                 <p>Ambivert, Tech-geek and Wanderlust who loves experiencing new things, also loves watching anime</p>
                                 <div class="position-relative mb-2">
                                     <a class="btn btn-outline-primary btn-square mr-1" target="_blank" href="https://instagram.com/_abhi_khot_?igshid=YmMyMTA2M2Y="><i class="fab fa-instagram"></i></a>
