--- a/templates/dtresults.html
+++ b/templates/dtresults.html
@@ -34,7 +34,8 @@
     <br>
     <div class="container-fluid py-5" id="team">
         
-    	<h6 class="text-uppercase  mb-3" style="padding-top:6%;margin-left: 20px;padding-right: 250px;font-size: 200%; color: #FFA3FD ;text-align: center;letter-spacing: 3px;">{{prediction_text1}}</h6>
+    	<h6 class="text  mb-3" style="text-shadow: 1px 1px 2px black, 0 0 1em blue, 0 0 0.2em blue;
+        color: white; padding-top:6%;margin-left: 20px;padding-right: 250px;font-size: 200%; color: #ffffff ;text-align: center;letter-spacing: 3px;">{{prediction_text1}}</h6>
         
     </div>                     
 	
