--- a/templates/report.html
+++ b/templates/report.html
@@ -31,7 +31,7 @@
         <center>
         <h1 style="color: #009CFF">Project Report</h1>
         <br>
-        <object data="/static/Project_Report phase 2.pdf" 
+        <object data="/static/Solar Energy Prediction using machine learning.pdf" 
                 width="800" 
                 height="600"> 
         </object>
